调整加密解密